--- a/my-cooking-app/package.json
+++ b/my-cooking-app/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "eslint"
+    "lint": "eslint",
+    "types": "npx supabase gen types typescript --project-id xhebsnwjpfcdttydwuhg > types/supabase.ts"
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.87.3",
@@ -15,7 +16,6 @@
     "next-themes": "^0.4.6",
     "react": "19.2.0",
     "react-dom": "19.2.0",
-    "supabase": "^2.67.1",
     "zod": "^4.2.1"
   },
   "devDependencies": {
@@ -27,6 +27,7 @@
     "eslint": "^9",
     "eslint-config-next": "16.0.1",
     "postcss": "^8.5.6",
+    "supabase": "^2.72.8",
     "tailwindcss": "^4.1.17",
     "typescript": "^5"
   }
